# Userverse

./: .gitignore  Dockerfile  LICENSE.txt  README.md  alembic.ini  coverage.xml  hello.py  mkdocs.yml  pyproject.toml  sample-config.json
.github/workflows/: build-and-test.yml  release.yml  testing-build.yml
alembic/: env.py
alembic/versions/: 84fe79d842e9_create_users_table.py  9552b9fc884a_add_new_table.py  9e858906b135_poc_models.py  c539ec0c41d5_poc_models.py  ed9ebb68b121_poc_models.py
app/: __init__.py  configs.py  main.py  sample-config.json
app/database/: __init__.py  association_user_company.py  base_model.py  company.py  role.py  user.py
app/logic/: mailer.py
app/logic/company/: company.py  role.py  user.py
app/logic/company/repository/: company.py  role.py  user.py
app/logic/services/user/: password.py  user.py
app/logic/user/: password.py  user.py
app/logic/user/repository/: password.py  user.py
app/middleware/: logging.py  otel.py
app/models/: app_error.py  generic_pagination.py  generic_response.py  phone_number.py  security_messages.py  tags.py
app/models/company/: address.py  company.py  response_messages.py  roles.py  user.py
app/models/user/: errors.py  messages.py  password.py  response_messages.py  user.py
app/routers/company/: company.py  roles.py  users.py
app/routers/user/: password.py  user.py
app/security/: basic_auth.py  jwt.py
app/utils/: app_error.py  config_db.py  config_env.py  config_logging.py  configs.py  db_config.py  env_config.py  hash_password.py  logging.py  logging_config.py
app/utils/config/: cors.py  database.py  email_config.py  environment.py  loader.py  logging.py
app/utils/email/: renderer.py  sender.py
app/utils/email/templates/: base.html  company_invite.html  reset_user_password.html  user_registration.html
coverage_reports/: coverage.xml
docs/: configuration.md
scripts/: env.py  run_http_tests.sh
tests/: README.md
tests/data/: user_db_test_data.json
tests/data/database/: association.json  company.json  role.json
tests/data/http/: user.json
tests/database/: conftest.py  test_a_user.py  test_b_company.py  test_c_role.py  test_e_association.py  user.py
tests/http/: client.py  conftest.py  test_main.py
tests/http/a_user/: test_a_create_user_api.py  test_b_user_login_api.py  test_c_get_user.py  test_e_password_reset_request.py  test_f_password_otp_verify.py
tests/http/b_company/: test_a_create_company.py  test_b_get_company.py  test_c_update_company.py  test_d_create_role.py  test_e_update_role.py  test_f_delete_role.py  test_g_get_roles.py  test_h_get_company_users.py  test_i_get_user_companies.py  test_j_add_user_to_company.py  test_k_remove_user_from_company.py
tests/http/c_company_roles/: test_f_delete_role.py  test_g_get_roles.py
tests/http/d_company_users/: test_h_get_company_users.py  test_j_add_user_to_company.py  test_k_remove_user_from_company.py
tests/http/user/: test_a_create_user_api.py  test_b_user_login_api.py  test_c_get_user.py  test_d_update_user_api.py  test_e_password_reset_request.py  test_f_password_otp_verify.py
tests/security/: test_basic.py  test_jwt.py
tests/utils/: __init__.py  basic_auth.py
tests/utils/config/: test_cors.py  test_database_config.py  test_environment_manager.py
tests/utils/email/: test_renderer.py  test_sender.py
