[project]
name = "userverse"
version = "0.6.4"
description = "Userverse is an open-source platform designed to make managing users, organizations, and their relationships simple and efficient."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-instrumentation-requests>=0.53b1",
    "opentelemetry-sdk>=1.32.1",
    "passlib>=1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.3",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
]

[tool.userverse.config]

# General metadata
name = "Userverse"
version = "0.1.0"
description = "Userverse backend API"

[tool.userverse.config.database]
HOST = "localhost"
PORT = 5432
USERNAME = "sandile"
PASSWORD = "Password123"
NAME = "userverse"
TYPE = "postgresql"

[tool.userverse.config.cor_origins]
allowed = ["*"]

[tool.userverse.config.email]
USERNAME = "your_email@example.com"
PASSWORD = "your_email_password"
HOST = "smtp.example.com"
PORT = 587

[tool.userverse.config.jwt]
SECRET = "your_jwt_secret"
ALGORITHM = "HS256"
TIMEOUT = 30
REFRESH_TIMEOUT = 60
